<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="greeting_textview">enter single digit values to add or subtract!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">clear</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="answer">ans</string>
    <string name="large_error_message">ERROR: number is too large!</string>
    <string name="small_error_message">ERROR: number is too small!</string>
</resources>