<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#808080"
        android:text="@string/greeting_textview"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/one_button"
        android:onClick="one"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two_button"
        android:text="@string/one"/>
    <Button
        android:id="@+id/two_button"
        android:onClick="two"
        android:textAllCaps="false"
        android:backgroundTint="#808080"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting_textview"
        app:layout_constraintLeft_toRightOf="@id/one_button"
        app:layout_constraintRight_toLeftOf="@id/three_button"
        android:text="@string/two"/>
    <Button
        android:id="@+id/three_button"
        android:onClick="three"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting_textview"
        app:layout_constraintLeft_toRightOf="@id/two_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/three"/>
    <Button
        android:id="@+id/four_button"
        android:onClick="four"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five_button"
        android:text="@string/four"/>
    <Button
        android:id="@+id/five_button"
        android:onClick="five"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintLeft_toRightOf="@id/four_button"
        app:layout_constraintRight_toLeftOf="@id/six_button"
        android:text="@string/five"/>
    <Button
        android:id="@+id/six_button"
        android:onClick="six"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintLeft_toRightOf="@id/five_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/six"/>
    <Button
        android:id="@+id/seven_button"
        android:onClick="seven"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five_button"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/eight_button"
        android:backgroundTint="#808080"
        android:onClick="eight"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintLeft_toRightOf="@id/four_button"
        app:layout_constraintRight_toLeftOf="@id/six_button"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/nine_button"
        android:onClick="nine"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintLeft_toRightOf="@id/five_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/nine"/>
    <Button
        android:id="@+id/clear_button"
        android:backgroundTint="#808080"
        android:onClick="clear"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five_button"
        android:text="@string/clear"/>
    <Button
        android:id="@+id/zero_button"
        android:backgroundTint="#808080"
        android:onClick="zero"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintLeft_toRightOf="@id/four_button"
        app:layout_constraintRight_toLeftOf="@id/six_button"
        android:text="@string/zero"/>
    <Button
        android:id="@+id/equals_button"
        android:onClick="equals"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintLeft_toRightOf="@id/five_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/equals"/>
    <Button
        android:id="@+id/answer_button"
        android:onClick="answer"
        android:backgroundTint="#808080"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/plus_button"
        android:text="@string/answer"/>
    <Button
        android:id="@+id/plus_button"
        android:backgroundTint="#808080"
        android:onClick="add"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintLeft_toRightOf="@id/answer_button"
        app:layout_constraintRight_toLeftOf="@id/minus_button"
        android:text="@string/plus"/>
    <Button
        android:id="@+id/minus_button"
        android:backgroundTint="#808080"
        android:onClick="subtract"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintLeft_toRightOf="@id/plus_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/minus"/>
</androidx.constraintlayout.widget.ConstraintLayout>